--- a/public/assets/templates/basic/css/main.css
+++ b/public/assets/templates/basic/css/main.css
@@ -73,7 +73,7 @@ body {
 	padding: 0;
 	margin: 0;
 	font-size: 16px;
-	color: rgb(var(--body));
+	color: hsl(var(--white));
 	line-height: 1.6;
 	font-family: var(--body-font);
 	display: flex;
@@ -91,7 +91,7 @@ p {
 
 a {
 	text-decoration: none;
-	color: rgb(var(--body));
+	color: hsl(var(--white));
 }
 
 a:hover {
@@ -138,7 +138,7 @@ a {
 }
 
 .text--base {
-	color: rgb(var(--base)) !important;
+	color: hsl(var(--white)) !important;
 }
 
 .bg--primary {
