--- a/public/assets/admin/css/app.css
+++ b/public/assets/admin/css/app.css
@@ -114,7 +114,7 @@
 }
 
 .nav-tabs-primary .nav-item a.active {
-  border-bottom: 2px solid #4634ff;
+  border-bottom: 2px solid #FF1618;
 }
 
 .hover--effect1 {
@@ -234,7 +234,7 @@ a {
 /* typography css end */
 /* color css start */
 .text--primary {
-  color: #4634ff !important;
+  color: #FF1618 !important;
 }
 
 .text--secondary {
@@ -1048,7 +1048,7 @@ a {
 }
 
 [class*='overlay'].overlay--primary::before {
-  background-color: #4634ff !important;
+  background-color: #FF1618 !important;
 }
 
 [class*='overlay'].overlay--secondary::before {
@@ -1299,11 +1299,11 @@ a {
 }
 
 .bl--5-primary {
-  border-left: 5px solid #4634ff !important;
+  border-left: 5px solid #FF1618 !important;
 }
 
 .border--primary {
-  border-color: #4634ff !important;
+  border-color: #FF1618 !important;
 }
 
 .border--secondary {
@@ -1536,7 +1536,7 @@ a {
   }
 
   .btn--primary {
-    --color: #4634ff;
+    --color: #FF1618;
     background-color: var(--color) !important;
     border: 1px solid var(--color) !important;
     color: var(--btn-color) !important;
@@ -1550,7 +1550,7 @@ a {
   }
 
   .btn-outline--primary {
-    --color: #4634ff;
+    --color: #FF1618;
     color: var(--color) !important;
     border-color: var(--color) !important;
   }
@@ -2937,7 +2937,7 @@ a {
   .btn--primary.btn--gradi,
   .btn-primary.btn--gradi {
     background: #640064;
-    background-image: linear-gradient(30deg, #4634ff, rgba(115, 103, 240, 0.5)) !important;
+    background-image: linear-gradient(30deg, #FF1618, rgba(115, 103, 240, 0.5)) !important;
     text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3);
   }
 
@@ -3245,7 +3245,7 @@ select:focus,
 select:active,
 select:visited,
 select:focus-within {
-  border-color: #4634ff;
+  border-color: #FF1618;
   box-shadow: 0 3px 9px rgba(50, 50, 9, 0.05), 3px 4px 8px rgba(115, 103, 240, 0.1);
 }
 
@@ -3277,8 +3277,8 @@ select:focus-within {
 }
 
 .form-check-primary .custom-control-input:checked ~ .custom-control-label::before {
-  border-color: #4634ff;
-  background-color: #4634ff;
+  border-color: #FF1618;
+  background-color: #FF1618;
 }
 
 .form-check-secondary .custom-control-input:checked ~ .custom-control-label::before {
@@ -3345,7 +3345,7 @@ select:focus-within {
 .pincode-input-container input:focus,
 .pincode-input-container input:active {
   box-shadow: none;
-  border-color: #4634ff;
+  border-color: #FF1618;
 }
 
 .pincode-input-container input ~ input:focus,
@@ -3502,7 +3502,7 @@ div.dataTables_wrapper div.dataTables_filter {
 
 div.dataTables_wrapper div.dataTables_filter input:focus {
   box-shadow: none;
-  border-color: #4634ff;
+  border-color: #FF1618;
 }
 
 div.dataTables_wrapper div.dataTables_filter label {
@@ -3524,8 +3524,8 @@ div.dataTables_wrapper .dt-buttons button {
 div.dataTables_wrapper .dt-buttons button:hover,
 div.dataTables_wrapper .dt-buttons button:focus,
 div.dataTables_wrapper .dt-buttons button:active {
-  background-color: #4634ff !important;
-  border-color: #4634ff !important;
+  background-color: #FF1618 !important;
+  border-color: #FF1618 !important;
   box-shadow: 0px 0px 7px 2px rgba(115, 103, 240, 0.46) !important;
 }
 
@@ -3585,7 +3585,7 @@ table.dataTable tbody tr td {
 }
 
 table.dataTable thead tr {
-  background-color: #4634ff;
+  background-color: #FF1618;
 }
 
 table.dataTable thead tr th {
@@ -3613,8 +3613,8 @@ table.dataTable thead tr th {
 }
 
 .dataTables_paginate .pagination .page-item.active .page-link {
-  background-color: #4634ff;
-  border-color: #4634ff;
+  background-color: #FF1618;
+  border-color: #FF1618;
   box-shadow: 0px 0px 5px 2px rgba(115, 103, 240, 0.46);
 }
 
@@ -3646,7 +3646,7 @@ table thead th:last-child {
 table.table--light thead th {
   border: none;
   color: #ffffff;
-  background-color: #4634ff;
+  background-color: #FF1618;
 }
 
 table.table--light.style--two thead th {
@@ -4055,8 +4055,8 @@ table.table--light.style--two tbody td {
 }
 
 .pagination .page-item.active .page-link {
-  background-color: #4634ff;
-  border-color: #4634ff;
+  background-color: #FF1618;
+  border-color: #FF1618;
   color: #ffffff;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
 }
@@ -5015,7 +5015,7 @@ th.w-85 {
   right: -35px;
   width: 35px;
   height: 35px;
-  background-color: #4634ff;
+  background-color: #FF1618;
   color: #ffffff;
   display: none;
 }
@@ -5040,14 +5040,14 @@ th.w-85 {
 }
 
 .sidebar .slimScrollDiv .slimScrollBar {
-  background-color: #4634ff !important;
+  background-color: #FF1618 !important;
   width: 5px !important;
   opacity: 1 !important;
 }
 
 .capsule--block .sidebar-menu-item.active a,
 .capsule--block .sidebar-menu-item.sidebar-dropdown .side-menu--open {
-  border-left: 3px solid #4634ff;
+  border-left: 3px solid #FF1618;
   border-radius: 0;
 }
 
@@ -5218,17 +5218,17 @@ th.w-85 {
 }
 
 .sidebar__menu .sidebar-menu-item > a:hover .menu-icon {
-  color: #4634ff;
-  text-shadow: 1px 2px 5px #4634ff;
+  color: #FF1618;
+  text-shadow: 1px 2px 5px #FF1618;
 }
 
 .sidebar__menu .sidebar-menu-item > a:hover .menu-title {
-  color: #4634ff;
+  color: #FF1618;
 }
 
 .sidebar__menu .sidebar-menu-item .side-menu--open,
 .sidebar__menu .sidebar-menu-item.active > a {
-  background-color: #4634ff !important;
+  background-color: #FF1618 !important;
 }
 
 .sidebar__menu .menu-icon {
@@ -5289,15 +5289,15 @@ th.w-85 {
 }
 
 .sidebar__menu .sidebar-submenu .sidebar-menu-item.active > a {
-  background-color: #4634ff59 !important;
+  background-color: #FF161859 !important;
 }
 
 .sidebar__menu .sidebar-submenu .sidebar-menu-item.active a .menu-icon {
-  color: #4634ff;
+  color: #FF1618;
 }
 
 .sidebar__menu .sidebar-submenu .sidebar-menu-item.active a .menu-title {
-  color: #4634ff;
+  color: #FF1618;
 }
 
 .sidebar__menu .sidebar-submenu .sidebar-menu-item a {
@@ -5306,11 +5306,11 @@ th.w-85 {
 }
 
 .sidebar__menu .sidebar-submenu .sidebar-menu-item a:hover .menu-icon {
-  color: #4634ff;
+  color: #FF1618;
 }
 
 .sidebar__menu .sidebar-submenu .sidebar-menu-item a:hover .menu-title {
-  color: #4634ff;
+  color: #FF1618;
 }
 
 .sidebar__menu .sidebar-submenu .sidebar-menu-item a .menu-icon {
@@ -5338,7 +5338,7 @@ th.w-85 {
 }
 
 .sidebar[class*='bg--'] .sidebar__menu .sidebar-menu-item > a:hover {
-  background-color: #4634ff59;
+  background-color: #FF161859;
 }
 
 .sidebar[class*='bg--'] .sidebar__menu .sidebar-menu-item .menu-icon,
@@ -5347,7 +5347,7 @@ th.w-85 {
 }
 
 .sidebar[class*='bg--'] .sidebar__menu .sidebar-menu-item .side-menu--open {
-  background-color: #4634ff !important;
+  background-color: #FF1618 !important;
 }
 
 .sidebar[class*='bg--'] .sidebar__menu .sidebar-dropdown > a::before {
@@ -5395,7 +5395,7 @@ th.w-85 {
 
 .sidebar[class*='bg--white'] .sidebar__menu .sidebar-menu-item > a:hover .menu-icon,
 .sidebar[class*='bg--white'] .sidebar__menu .sidebar-menu-item > a:hover .menu-title {
-  color: #4634ff;
+  color: #FF1618;
 }
 
 .sidebar[class*='bg--white'] .sidebar__menu .sidebar-menu-item .menu-icon,
@@ -5409,7 +5409,7 @@ th.w-85 {
 
 .sidebar.pill--bg-1 .sidebar-menu-item .side-menu--open,
 .sidebar.pill--bg-1 .sidebar-menu-item.active > a {
-  background-color: #4634ff;
+  background-color: #FF1618;
 }
 
 .sidebar.pill--bg-2 .sidebar-menu-item .side-menu--open,
@@ -5530,8 +5530,8 @@ th.w-85 {
 }
 
 .navbar-search .navbar-search-field:focus {
-  border-color: #4634ff;
-  box-shadow: 0 0 5px #4634ff80;
+  border-color: #FF1618;
+  box-shadow: 0 0 5px #FF161880;
 }
 
 .navbar-search i {
@@ -5792,7 +5792,7 @@ th.w-85 {
 }
 
 .dropdown-menu__footer .view-all-message:hover {
-  color: #4634ff;
+  color: #FF1618;
 }
 
 .message-notifi {
@@ -5894,7 +5894,7 @@ th.w-85 {
   width: 7px;
   height: 7px;
   border-radius: 50%;
-  background: #4634ff;
+  background: #FF1618;
   cursor: pointer;
   box-shadow: 0 0 0 rgba(115, 103, 240, 0.9);
   animation: pulse-primary 2s infinite;
@@ -6291,7 +6291,7 @@ th.w-85 {
 }
 
 .page-breadcrumb li a {
-  color: #4634ff;
+  color: #FF1618;
 }
 
 #world-map-markers {
@@ -6702,7 +6702,7 @@ th.w-85 {
 
 .icon-btn {
   padding: 3px 8px;
-  background-color: #4634ff;
+  background-color: #FF1618;
   color: #ffffff;
   border-radius: 3px;
   font-size: 13px;
@@ -6759,8 +6759,8 @@ a.icon-btn {
 
 .badge--primary {
   background-color: rgba(115, 103, 240, 0.1);
-  border: 1px solid #4634ff;
-  color: #4634ff;
+  border: 1px solid #FF1618;
+  color: #FF1618;
 }
 
 .badge--dark {
@@ -6990,7 +6990,7 @@ a.icon-btn {
   right: 0;
   display: inline-block;
   height: 100%;
-  background: #4634ff;
+  background: #FF1618;
   color: #fff;
   font-weight: 500;
   z-index: 25;
@@ -7284,7 +7284,7 @@ label.required:after {
 }
 
 .mailsent .envelope i {
-  color: #4634ff;
+  color: #FF1618;
 }
 
 .mailsent .envelope .icon {
@@ -7296,7 +7296,7 @@ label.required:after {
   position: absolute;
   width: 10px;
   height: 2px;
-  background: #4634ff;
+  background: #FF1618;
   display: block;
 }
 
@@ -7644,12 +7644,12 @@ label.required:after {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #4634ff;
+  background-color: #FF1618;
 }
 
 .mail-icon {
   font-size: 60px;
-  color: #4634ff;
+  color: #FF1618;
   position: relative;
   z-index: 2;
   background: #fff;
@@ -7682,10 +7682,10 @@ label.required:after {
 }
 
 .sidebar__menu-wrapper::-webkit-scrollbar-thumb {
-  background: #4634ff;
+  background: #FF1618;
 }
 .sidebar__menu-wrapper::-webkit-scrollbar-thumb:hover {
-  background: #4634ff !important;
+  background: #FF1618 !important;
 }
 
 .sidebar__menu-wrapper::-webkit-scrollbar-thumb:hover {
@@ -7716,7 +7716,7 @@ label.required:after {
   position: absolute;
   height: 0%;
   width: 100%;
-  background: #4634ff;
+  background: #FF1618;
   overflow: hidden;
   color: #fff;
   cursor: pointer;
@@ -7776,7 +7776,7 @@ label.required:after {
 }
 
 .select2-dropdown {
-  border: 1px solid #4634ff;
+  border: 1px solid #FF1618;
 }
 
 .select2-container--default .select2-selection--single,
@@ -7880,7 +7880,7 @@ label.required:after {
 }
 
 .notification-via.active {
-  border-color: #4634ff;
+  border-color: #FF1618;
   position: relative;
 }
 
@@ -7893,7 +7893,7 @@ label.required:after {
   top: -1px;
   position: absolute;
   color: #fff;
-  background: #4634ff;
+  background: #FF1618;
   text-align: right;
   width: 50px;
   height: 40px;
@@ -7917,11 +7917,11 @@ label.required:after {
 }
 
 .nav-tabs-primary .nav-item a.active {
-  border-bottom: 2px solid #4634ff;
+  border-bottom: 2px solid #FF1618;
 }
 
 .breadcrumb-nav li.active a {
-  color: #4634ff !important;
+  color: #FF1618 !important;
 }
 
 .breadcrumb-nav-open {
@@ -8196,7 +8196,7 @@ label.required:after {
 
 .select2-container--open .select2-selection.select2-selection--single,
 .select2-container--open .select2-selection.select2-selection--multiple {
-  border-color: #4634ff !important;
+  border-color: #FF1618 !important;
   border-radius: 5px !important;
   box-shadow: 0 3px 9px rgba(50, 50, 9, 0.05), 3px 4px 8px rgba(115, 103, 240, 0.1);
 }
