--- a/public/assets/admin/css/app.css
+++ b/public/assets/admin/css/app.css
@@ -6425,7 +6425,7 @@ th.w-85 {
   position: relative;
   z-index: 1;
   overflow: hidden;
-  background-color: #3d2bfb;
+  background-color: #FF1618;
 }
 
 @media (max-width: 575px) {
@@ -6468,7 +6468,7 @@ th.w-85 {
 }
 
 .login-wrapper {
-  background-color: #1e157d;
+  background-color: #DDDDDD;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -6480,7 +6480,7 @@ th.w-85 {
 .login-wrapper__top {
   padding: 60px 30px 40px 30px;
   text-align: center;
-  background-color: #3d2bfb;
+  background-color: #FF1618;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -6505,7 +6505,7 @@ th.w-85 {
   z-index: -1;
   border-width: 25px 256px 0px 256px;
   border-style: solid;
-  border-color: #3d2bfb transparent transparent transparent;
+  border-color: #FF1618 transparent transparent transparent;
 }
 
 @media (max-width: 1399px) {
@@ -6594,7 +6594,7 @@ th.w-85 {
 
 .login-form .form-control:focus {
   background-color: transparent;
-  border-color: #3d2bfb;
+  border-color: #FF1618;
 }
 
 .login-form .forget-text {
@@ -6610,7 +6610,7 @@ th.w-85 {
 }
 
 .cmn-btn {
-  background-color: #3d2bfb;
+  background-color: #FF1618;
   color: #fff;
   height: 50px;
 }
@@ -6663,8 +6663,8 @@ th.w-85 {
 
 .login-form .form-check .form-check-input:checked ~ .form-check-label::before {
   content: '\f00c';
-  background-color: #3d2bfb;
-  border-color: #3d2bfb;
+  background-color: #FF1618;
+  border-color: #FF1618;
 }
 
 /* login css end */
