--- a/public/assets/templates/basic/css/main.css
+++ b/public/assets/templates/basic/css/main.css
@@ -73,7 +73,7 @@ body {
 	padding: 0;
 	margin: 0;
 	font-size: 16px;
-	color: hsl(var(--white));
+	/* color: hsl(var(--white)); */
 	line-height: 1.6;
 	font-family: var(--body-font);
 	display: flex;
