--- a/public/assets/errors/css/main.css
+++ b/public/assets/errors/css/main.css
@@ -16,7 +16,10 @@ body {
     line-height: 1.7;
     background-color: #fff;
 }
+.register-url {
+    color: #FF1618 !important;
 
+}
 img {
     max-width: 100%;
     height: auto;
@@ -207,7 +210,7 @@ a:hover {
 }
 
 @media screen and (max-width:480px) {
-    
+
     .error-500-thumb-cat{
         width: 80px;
         height: 80px;
